# webrtc-starter-kit

./: CMakeLists.txt  README.md
CMakeModules/: FindLibraries.cmake  FindWebRTC.cmake
src/: CMakeLists.txt  main.cpp
